# gateway/docs/swagger.json
@@ -348,96 +348,6 @@
                 }
             }
         },
-        "/api/v1/notification/add": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This API creates a notification",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "carwash/Notification"
-                ],
-                "summary": "CREATE notification",
-                "parameters": [
-                    {
-                        "description": "Notification",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/genproto.AddNotificationReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "message\": \"created successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "error\": \"error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/notification/{id}/read": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This API marks a notification as read",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "carwash/Notification"
-                ],
-                "summary": "MARK notification as read",
-                "parameters": [
-                    {
-                        "description": "Notification",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/genproto.MarkNotificationAsReadReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "message\": \"updated successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "error\": \"error message",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/payment": {
             "get": {
                 "description": "This API retrieves all Payments with optional filters",
@@ -1117,12 +1027,6 @@
                 "summary": "List all service",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Name",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
                         "type": "integer",
                         "description": "Limit",
                         "name": "limit",
@@ -1438,17 +1342,6 @@
                 }
             }
         },
-        "genproto.AddNotificationReq": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "genproto.AddPaymentReq": {
             "type": "object",
             "properties": {
@@ -1679,14 +1572,6 @@
                     "items": {
                         "$ref": "#/definitions/genproto.Services"
                     }
-                }
-            }
-        },
-        "genproto.MarkNotificationAsReadReq": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
                 }
             }
         },
